--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <mainClass>com.faculdade.oo.Main</mainClass>
+                    <mainClass>com.faculdade.oo.TrabalhoOficial</mainClass>
                 </configuration>
             </plugin>
         </plugins>
